# scdepth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  custom_libs.md  downsampler.md  pyproject.toml  pyrightconfig.json  tag_format.md
example/pbmc_1k_protein_v3/: scdepth_fit_baseline.txt  scdepth_fit_curve.txt  scdepth_fit_recovery_costs.txt  scdepth_fit_rpm_histograms.txt  scdepth_fit_saturation_costs.txt  scdepth_summary.txt
notebooks/: DownsamplingDemo.ipynb
scdepth/: benchmark.py  cli.py  filt.py  fit.py  fn.py  libraries.py  ztnb2.py
scdepth/bindings/: __init__.py  _bindings.pyi
scdepth/cmds/: __init__.py  barcodes.py  common.py  counter.py  curve.py  emptydrops.py  genes.py  libraries.py  limits.py  preseq.py  probes.py  stability.py
scdepth/pl/: __init__.py  fits.py  misc.py  violin.py  vis.py
src/: CMakeLists.txt  bind_cntr.cpp  bind_ds.cpp  bind_govs.cpp  bind_vis.cpp  bindings.cpp  bindings.hpp  counter.cpp  counter.hpp  downsampler.cpp  downsampler.hpp  dsdata.cpp  dsdata.hpp  dsmisc.hpp  dsthread.cpp  dsthread.hpp  goverlaps.cpp  goverlaps.hpp  gtf.cpp  gtf.hpp  gzstream.cpp  gzstream.hpp  iitree.hpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp  scdepth.cpp  shards.cpp  shards.hpp  tags.cpp  tags.hpp  umis.cpp  umis.hpp  visbins.cpp  visbins.hpp
