# pyproject.toml

[build-system]
requires        = ['scikit-build-core','numpy', 'wheel']

build-backend = "scikit_build_core.build"

[project]
name        = 'scdepth'
description = "scdepth"
version     = "1.0"
requires-python = ">=3.8"
dependencies = ['matplotlib','numpy','scipy', 
                'pandas', 'tqdm', 'psutil', 'ninja', 
                "pyarrow!=19.0.0,>=18.1.0", 'threadpoolctl',
                'joblib', 'scikit-misc', 'igraph', 'leidenalg', 'scanpy',
                'anndata']

[project.urls]
"Homepage" = "https://github.com/GWW/scdepth"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["scdepth"]

[project.scripts]
scdepth = "scdepth.cli:main"

[project.optional-dependencies]
emptydrops = [
    "rpy2>=3.5",
]
